[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Enemies/Rat.png" type="Texture" id=1]
[ext_resource path="res://scripts/Rat.gd" type="Script" id=2]
[ext_resource path="res://sounds/Enemies/Rat.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=10]
resource_name = "Attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 45, 43, 53 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9.5, 10.5 )

[sub_resource type="CircleShape2D" id=6]
radius = 78.8543

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 15, 14.5 )

[node name="Rat" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )
speed = 60
health = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -17 )
texture = ExtResource( 1 )
hframes = 9
vframes = 6

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 10 )
anims/Death = SubResource( 5 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, 1.5 )
shape = SubResource( 7 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="." groups=["hurt"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1.5 )
shape = SubResource( 9 )

[node name="attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="on_body_exited"]
